@@ -476,6 +476,7 @@
         contextTbody.appendChild(fu.createDetailTableHeader());
 
         browser.runtime.sendMessage({ "event": "requestRestorePopupState" });
+        browser.runtime.sendMessage({ "event": "insertCssToPopup" });
     });
 
 
