@@ -1,5 +1,9 @@
 2017-12-25  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/background/try_xpath_background.js:
+	Define popupCss variable.
+	Define genericListener.listeners.insertCssToPopup function.
+
 	* tryXpath/popup/popup.css:
 	Modify some styles.
 
